--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.3",
-    "jquery": "^3.6.0",
+    "jquery": "3.4.1",
+    "popper.js": "^1.16.1",
     "rails_admin": "3.0.0",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
